--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,12 @@
     justify-content: center;
     height: 90vh;
   }
+  button{
+    background-color: black !important;
+    color :#00544E !important;
+    font-weight: 700;
+    border: 2px solid black !important;
+  }
   .card{
     color: black !important;
     font-weight: 500;
